# noname

./: Cargo.toml
assets/: Player.prototype.ron  characters.assets.ron  characters.config.ron  config.animations.ron
assets/shaders/: flash_on_hit.wgsl
src/: animation.rs  assets.rs  common.rs  enemy.rs  lib.rs  main.rs  resources.rs
src/player/: attack.rs  mod.rs  movement.rs  spawn.rs
