[package]
name = "noname"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.2", features = ["dynamic_linking", "png"] }
bevy-inspector-egui = "0.26.0"
bevy_asset_loader = { version = "0.21.0", features = ["2d"] }
bevy_common_assets = { version = "0.11.0", features = ["ron"] }
bevy_rand = { version = "0.7.1", features =  ["rand_chacha", "wyrand"]}
bevy_spritesheet_animation = "0.4.2"
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
