[package]
name = "noname"
version = "0.1.0"
edition = "2021"

[dependencies]
avian2d = { version = "0.1.2", features = ["debug-plugin"] }
bevy = { version = "0.14.2", features = ["dynamic_linking", "png"] }
bevy-inspector-egui = "0.26.0"
bevy_asset_loader = { version = "0.21.0", features = ["2d", "standard_dynamic_assets"] }
bevy_common_assets = { version = "0.11.0", features = ["ron"] }
bevy_hanabi = "0.12.2"
bevy_rand = { version = "0.7.1", features =  ["rand_chacha", "wyrand"]}
bevy_screen_diagnostics = "0.6.0"
bevy_spatial = "0.9.1"
bevy_spritesheet_animation = "0.4.2"
bevy_tweening = "0.11.0"
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
